--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,186 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="CSS/styles.css" rel="stylesheet">
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
+    <link href="/your_path_to_version_6_files/css/all.css" rel="stylesheet">
     <title>CarMakers</title>
 </head>
+
+
+
 <body>
-    
+
+    <header>
+
+        <div class="barra-blanca">
+            <nav class="navbar">
+                <h1>CARMAKERS</h1>
+                <button class="menu">Menú</button>
+        </nav>
+        </div>
+
+
+    </header>
+
+
+    <main>
+        <section class="slider">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="\imgs\bosque.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="\imgs\black.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="\imgs\grey.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+                
+                <!--
+                <div class="texto-principal">
+                    <h2 class="nombre-auto">Modelo 1</h2>
+                    <h3 class="desc-auto">Hecho para la vida real</h3>
+                </div>
+                -->
+
+              </div>
+
+              <div class="box-container">
+                  <form class="elements-container">
+                        <input type="text" placeholder="Marcas, modelos, características" class="search" required="">
+                        <button type="submit" class="boton-lupa"><i class="fas fa-search" id="icono-lupa"></i></button>
+                  </form>
+              </div>
+
+
+              <div class="icon-arrow">
+                <i class="fa-solid fa-angle-down"></i>
+              </div>
+        </section>
+        
+        <article class="article-wpp">
+            <div class="wpp-container">
+                <button type="button" ><img src="\imgs\wpp.png" alt="Whatsapp"></button>
+            </div>
+        </article>
+        
+        </section>
+
+
+
+
+
+        <section class="seccion-uno">
+
+            <div class="texto-uno">
+                <h2 class="nombre-auto-uno">Modelo 1</h2>
+                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+            </div>
+
+            <div class="botones">
+                <button type="button" class="saber-mas">SABER MÁS</i></button>
+                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+            </div>
+
+        </section>
+
+
+
+
+
+        <section class="seccion-dos">
+
+            <div class="texto-uno">
+                <h2 class="nombre-auto-uno">Modelo 2</h2>
+                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+            </div>
+
+            <div class="botones">
+                <button type="button" class="saber-mas">SABER MÁS</i></button>
+                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+            </div>
+
+        </section>
+
+
+
+
+
+        <section class="seccion-tres">
+
+            <div class="texto-uno">
+                <h2 class="nombre-auto-uno">Modelo 3</h2>
+                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+            </div>
+
+            <div class="botones">
+                <button type="button" class="saber-mas">SABER MÁS</i></button>
+                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+            </div>
+
+        </section>
+
+
+
+
+
+        <section class="seccion-cuatro">
+
+            <div class="texto-uno">
+                <h2 class="nombre-auto-uno">Modelo 4</h2>
+                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+            </div>
+
+            <div class="botones">
+                <button type="button" class="saber-mas">SABER MÁS</i></button>
+                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+            </div>
+
+        </section>
+
+
+
+
+
+        <section class="seccion-cinco">
+
+            <div class="texto-uno">
+                <h2 class="nombre-auto-uno">Modelo 5</h2>
+                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+            </div>
+
+            <div class="botones">
+                <button type="button" class="saber-mas">SABER MÁS</i></button>
+                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+            </div>
+
+        </section>
+
+
+
+    </main>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
