Agregué el footer

--- a/views/index.html
+++ b/views/index.html
@@ -180,6 +180,20 @@
 
 
 
+
+        <section>
+            <h4>PODÉS TENER TU AUTO EN 5 PASOS</h4>
+            <img src="\imgs\cincopasos.jpg" alt="Cinco pasos para tener tu auto">
+        </section>
+
+        <footer>
+
+
+
+        </footer>
+
+
+
     </main>
 
 
