--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
-    <link href="/your_path_to_version_6_files/css/all.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8d64f88109.js" crossorigin="anonymous"></script>
     <title>CarMakers</title>
 </head>
 
@@ -181,13 +181,55 @@
 
 
 
-        <section>
+        <section class="cincopasos">
             <h4>PODÉS TENER TU AUTO EN 5 PASOS</h4>
-            <img src="\imgs\cincopasos.jpg" alt="Cinco pasos para tener tu auto">
+
+            <article>
+                <img src="\imgs\cincopasos.jpg" alt="Cinco pasos para tener tu auto">
+            </artic>
         </section>
 
         <footer>
+            <h4 class="carmakers">CARMAKERS</h4>
 
+
+            <form class="form-footer">
+                <h5>Sumate al newsletter</h5>
+
+                <input type="email" placeholder="tuemail@ejemplo.com" class="email" required="">
+
+                <div class="terminos">
+                    <input type="checkbox" name="datos" value="email" required>
+                    <label for="datos">Acepto términos y condiciones</label>
+                </div>
+
+                <button type="submit" class="suscribirme">SUSCRIBIRME</button>
+            </form>
+
+            <div class="social-media">
+                <h5>Seguínos en</h5>
+                <article class="iconos">
+                    <a href="https://youtube.com"><img src="\imgs\youtube.png" alt="Logo Youtube"/></a>
+                    <a href="https://linkedin.com"><img src="\imgs\linkedin.png" alt="Logo Linkedin"/></a>
+                    <a href="https://facebook.com"><img src="\imgs\facebook.png" alt="Logo Twitter"/></a>
+                    <a href="https://twitter.com"><img src="\imgs\twitter.png" alt="Logo Facebook"/></a>
+                    <a href="https://instagram.com"><img src="\imgs\instagram.png" alt="Logo Instagram"/></a>
+                </article>
+            </div>
+
+
+            <div class="links">
+                <a href="/sobrenosotros.html">Sobre Nosotros</a>
+                <a href="/terminos.html">Términos y condiciones</a>
+                <a href="/cookies.html">Política de cookies</a>
+                <a href="/privacidad.html">Política de privacidad</a>
+            </div>
+
+
+            <div class="copy">
+                <p class="2022">CarMakers © 2022, </p>
+                <p class="derechos">Todos los derechos reservados</p>
+            </div>
 
 
         </footer>
