--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
 
 
     <main>
-        <section class="slider">
+        <section>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -76,7 +76,7 @@
 
 
               <div class="icon-arrow">
-                <i class="fa-solid fa-angle-down"></i>
+                <i class="fas fa-solid fa-angle-down"></i>
               </div>
         </section>
         
@@ -100,8 +100,14 @@
             </div>
 
             <div class="botones">
-                <button type="button" class="saber-mas">SABER MÁS</i></button>
-                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                <a href="/detalleproducto">
+                    <button type="button" class="saber-mas">SABER MÁS</i></button>
+                </a>
+
+                <a href="/carrito">
+                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                </a>
+                
             </div>
 
         </section>
@@ -118,8 +124,12 @@
             </div>
 
             <div class="botones">
-                <button type="button" class="saber-mas">SABER MÁS</i></button>
-                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                <a href="/detalleproducto">
+                    <button type="button" class="saber-mas">SABER MÁS</i></button>
+                </a>
+                <a href="/carrito">
+                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                </a>
             </div>
 
         </section>
@@ -136,8 +146,12 @@
             </div>
 
             <div class="botones">
-                <button type="button" class="saber-mas">SABER MÁS</i></button>
-                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                <a href="/detalleproducto">
+                    <button type="button" class="saber-mas">SABER MÁS</i></button>
+                </a>
+                <a href="/carrito">
+                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                </a>
             </div>
 
         </section>
@@ -154,8 +168,12 @@
             </div>
 
             <div class="botones">
-                <button type="button" class="saber-mas">SABER MÁS</i></button>
-                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                <a href="/detalleproducto">
+                    <button type="button" class="saber-mas">SABER MÁS</i></button>
+                </a>
+                <a href="/carrito">
+                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                </a>
             </div>
 
         </section>
@@ -171,9 +189,16 @@
                 <h3 class="desc-auto-uno">Hecho para la vida real</h3>
             </div>
 
+
+
+            
             <div class="botones">
-                <button type="button" class="saber-mas">SABER MÁS</i></button>
-                <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                <a href="/detalleproducto">
+                    <button type="button" class="saber-mas">SABER MÁS</i></button>
+                </a>
+                <a href="/carrito">
+                    <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
+                </a>
             </div>
 
         </section>
@@ -189,55 +214,53 @@
             </artic>
         </section>
 
-        <footer>
-            <h4 class="carmakers">CARMAKERS</h4>
-
-
-            <form class="form-footer">
-                <h5>Sumate al newsletter</h5>
-
-                <input type="email" placeholder="tuemail@ejemplo.com" class="email" required="">
-
-                <div class="terminos">
-                    <input type="checkbox" name="datos" value="email" required>
-                    <label for="datos">Acepto términos y condiciones</label>
-                </div>
-
-                <button type="submit" class="suscribirme">SUSCRIBIRME</button>
-            </form>
-
-            <div class="social-media">
-                <h5>Seguínos en</h5>
-                <article class="iconos">
-                    <a href="https://youtube.com"><img src="\imgs\youtube.png" alt="Logo Youtube"/></a>
-                    <a href="https://linkedin.com"><img src="\imgs\linkedin.png" alt="Logo Linkedin"/></a>
-                    <a href="https://facebook.com"><img src="\imgs\facebook.png" alt="Logo Twitter"/></a>
-                    <a href="https://twitter.com"><img src="\imgs\twitter.png" alt="Logo Facebook"/></a>
-                    <a href="https://instagram.com"><img src="\imgs\instagram.png" alt="Logo Instagram"/></a>
-                </article>
-            </div>
-
-
-            <div class="links">
-                <a href="/sobrenosotros.html">Sobre Nosotros</a>
-                <a href="/terminos.html">Términos y condiciones</a>
-                <a href="/cookies.html">Política de cookies</a>
-                <a href="/privacidad.html">Política de privacidad</a>
-            </div>
-
-
-            <div class="copy">
-                <p class="2022">CarMakers © 2022, </p>
-                <p class="derechos">Todos los derechos reservados</p>
-            </div>
-
-
-        </footer>
-
-
 
     </main>
 
+    <footer>
+        <h4 class="carmakers">CARMAKERS</h4>
+
+
+        <form class="form-footer">
+            <h5>Sumate al newsletter</h5>
+
+            <input type="email" placeholder="tuemail@ejemplo.com" class="email" required="">
+
+            <div class="terminos">
+                <input type="checkbox" name="datos" value="email" required>
+                <label for="datos">Acepto términos y condiciones</label>
+            </div>
+
+            <button type="submit" class="suscribirme">SUSCRIBIRME</button>
+        </form>
+
+        <div class="social-media">
+            <h5>Seguínos en</h5>
+            <article class="iconos">
+                <a href="https://youtube.com"><img src="\imgs\youtube.png" alt="Logo Youtube"/></a>
+                <a href="https://linkedin.com"><img src="\imgs\linkedin.png" alt="Logo Linkedin"/></a>
+                <a href="https://facebook.com"><img src="\imgs\facebook.png" alt="Logo Twitter"/></a>
+                <a href="https://twitter.com"><img src="\imgs\twitter.png" alt="Logo Facebook"/></a>
+                <a href="https://instagram.com"><img src="\imgs\instagram.png" alt="Logo Instagram"/></a>
+            </article>
+        </div>
+
+
+        <div class="links">
+            <a href="/sobrenosotros.html">Sobre Nosotros</a>
+            <a href="/terminos.html">Términos y condiciones</a>
+            <a href="/cookies.html">Política de cookies</a>
+            <a href="/privacidad.html">Política de privacidad</a>
+        </div>
+
+
+        <div class="copy">
+            <p class="2022">CarMakers © 2022, </p>
+            <p class="derechos">Todos los derechos reservados</p>
+        </div>
+
+
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
