Unifiqué hojas de estilo del login

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b12fa36c29.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8d64f88109.js" crossorigin="anonymous"></script>
-    <title>CarMakers</title>
+    <title>Mis compras</title>
 </head>
 
 
