--- a/views/detalleproducto.html
+++ b/views/detalleproducto.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8d64f88109.js" crossorigin="anonymous"></script>
-    <title>CarMakers</title>
+    <title>Productos</title>
 </head>
 
 
