--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -647,7 +647,6 @@ main section article div h3{
     padding: 0 20px;
 }
 
-
 .flex-nombre-desc h4{
     font-family: 'Raleway', sans-serif;
     font-size: 15px;
@@ -794,7 +793,6 @@ main section article div h3{
     margin-bottom: 0;
 }
 
-
 .links-carrito{
     text-align: center;
     font-family: 'Raleway', sans-serif;
@@ -804,4 +802,128 @@ main section article div h3{
 .links-carrito a{
     text-decoration: none;
     color: #6a6a6a;
+}
+
+/*--LOG IN---*/
+
+.titulo-login{
+    font-size: 25px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    padding-top: 90px;
+    padding-bottom: 10px;
+}
+
+.correo-contra{
+    display:flex;
+    flex-direction: column;
+}
+
+.label-contra, .label-correo{
+    font-size: 16px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-left: 15px;
+    color:#6a6a6a;
+}
+
+#correo, #contraseña{
+    background-color: #ececec;
+    border-radius: 20px;
+    margin: 5px auto 0 auto;
+    width: 100%;
+    padding: 10px;
+    border:none;
+}
+
+#correo:focus, #contraseña:focus{
+    outline-color: #c7c7c7;
+}
+
+.form-container{
+    width: 90%;
+    margin: 0 auto;
+}
+
+.form-login{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.single-column{
+    max-width: 410px;
+    margin: 0 auto 0 auto;
+    padding: 0;
+}
+
+.recuerdame{
+    font-family: 'Roboto', sans-serif;
+    margin: 10px 0 0 10px;
+}
+
+.checkbox-label{
+    padding-left: 3px;
+}
+
+.login-button{
+    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    border:none;
+    color:white;
+    background-color: #9bbae6;
+    width: 100%;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px 0;
+
+}
+
+.olvido{
+    display:flex;
+    margin-top: 20px;
+    justify-content: center;
+}
+
+.olvido div a{
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color:#6a6a6a;
+    text-align: center;
+}
+
+.olvido-correo{
+    text-align: center;
+    margin-right: 10px;
+    padding-left: 10px;
+}
+
+.olvido-contraseña{
+    text-align: center;
+    padding-right: 10px;
+}
+
+.no-account{
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    color:#6a6a6a;
+    margin: 10px 0px 0px 0px;
+    text-align: center;
+}
+
+.account-button{
+    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
+    background-color: white;
+    border-radius: 20px;
+    width: 80%;
+    padding: 10px;
+    border:solid 2px black;
+    margin-top:20px;
+    font-weight: 600;
+}
+
+.boton-crear-cuenta{
+    text-align: center;
 }
