--- a/views/login.html
+++ b/views/login.html
@@ -4,71 +4,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href= "/public/css/login-styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="CSS/styles.css" rel="stylesheet">
+    <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b12fa36c29.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8d64f88109.js" crossorigin="anonymous"></script>
     <title>Iniciar sesión</title>
 </head>
 <body>
     <body>
 
-        <div class="container">
-            <div class="header">
-                <div class="img-container"><img class= logo src="/public/img/logo.png" alt="Img not found"></div>
-                <a href="#" class="a-menu"> Menú </a>
+
+        <header>
+
+            <div class="barra-blanca">
+                <nav class="navbar">
+                    <h1>CARMAKERS</h1>
+                    <button class="menu">Menú</button>
+            </nav>
             </div>
-            <div class="titulo"> 
-                Iniciar sesión
-            </div>
-            <div class="form-container">
-                <form class="login">
-                    <p> Correo electrónico</p>
-                    <input type="email" name="email"> </form>
-                    <p>Contraseña</p>
-                    <input type="password" name="password"> </input>
-                <button class="login-button" type="submit" name="ingreso">INGRESAR</button>
-                <input class="checkbox-box" type="checkbox" value="lsRememberMe" id="rememberMe"> 
-                <label class="checkbox-label" for="rememberMe">Recuérdame</label>
+    
+        </header>
+
+
+        <main>
+
+            <div clas="big-container">
+
+
+
+                <div class="single-column">
+                <form action="/" method="POST" class="form-login">
+
+                    <h2 class="titulo-login">Iniciar sesión</h2>
+
+                    <div class="correo-contra">
+                        <label for="correo" class="label-correo">Correo electrónico</label>
+                        <input type="email" name="correo" id="correo" required>
+
+                        <label for="contraseña" class="label-contra">Contraseña</label>
+                        <input type="password" name="contraseña" id="contraseña" required>
+                    </div>
+                    
+                    <div class="recuerdame">
+                        <input class="checkbox-box" type="checkbox" value="lsRememberMe" id="rememberMe"> 
+                        <label class="checkbox-label" for="rememberMe">Recuérdame</label>
+                    </div>
+
+                    <div class="div-login-button">
+                        <button class="login-button" type="submit" name="ingreso">INGRESAR</button>
+                    </div>
+
                 </form>
-            </div>
+
             
             <div class="olvido">
-            <div class="correo">
-                ¿Olvidó el correo electrónico?
-            </div>
-            <div class="contraseña">
-                ¿Olvidó la contraseña?
-            </div>  
-        </div>
-        <p class="no-account">¿No tiene una cuenta?</p>
-        <button class="account-button" type="submit" name="ingreso">CREAR UNA CUENTA
 
-        </button>
-</body>
-<footer class="pie-de-pagina">
-    <p>CarMakers 2022,</p> 
-    <div class="container-footer">
-    <p>Sobre Nosotros </p>
-    <p>Términos y condiciones</p>
-    </div>
-</footer>    
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                    </html>
+                <div class="olvido-correo">
+                    <a href="/support.html">¿Olvidó el correo electrónico?</a>
+                </div>
+
+                <div class="olvido-contraseña">
+                    <a href="/resetpass.html">¿Olvidó la contraseña?</a>
+                </div>
+            </div>
+
+        <p class="no-account">¿No tiene una cuenta?</p>
+
+        <div class="boton-crear-cuenta">
+            <button class="account-button" type="submit" name="ingreso">CREAR UNA CUENTA</button>
+        </div>
+
+        </div>
+
+        </main>
+
+        <footer id="footer-carrito">
+
+            <div class="copy-carrito">
+                <p class="car-carrito">CarMakers © 2022</p>
+            </div>
+    
+            <div class="links-carrito">
+                <a href="/sobrenosotros.html">Sobre Nosotros</a>
+                <a href="/terminos.html">Términos y condiciones</a>
+            </div>
+    
+        </footer>
+    
+    </body>
+    </html>
