Intento de menu responsive

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -27,7 +27,7 @@
 
         <div class="barra-blanca">
             <nav class="navbar">
-                <h1>CARMAKERS</h1>
+                <a href="/"><h1>CARMAKERS</h1></a>
                 <button class="menu">Menú</button>
         </nav>
         </div>
