--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1,11 +1,13 @@
 *{
     box-sizing: border-box;
-    }
+    scroll-behavior: smooth;
+}
 
 @font-face {
     font-family: fuentelogo;
     src: url(fuentelogo.otf);
 }
+
 
 /*---NAV---*/
 
@@ -17,6 +19,7 @@
 }
 
 nav h1{
+    color:black;
     padding:0;
     margin: 10px 0 0 15px;
     font-family: fuentelogo;
@@ -26,8 +29,9 @@ nav h1{
     z-index: 5;
 }
 
-nav button{
-    margin: 5px 0 0 0;
+.menu{
+    cursor:pointer;
+    margin: 8px 3px 0 0;
     border:none;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
@@ -37,14 +41,46 @@ nav button{
     right: 5px;
     top:2px;
     z-index: 5;
+    background-color: #ececec;
 }
-
 
 .barra-blanca{
     background-color: #ffffff;
     width:100%;
     position:fixed;
     z-index: 4;
+}
+
+.enlaces-menu{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    padding-right:100px;
+    background-color: rgb(255, 255, 255);
+    height: 100vh;
+    z-index: 20;
+    display: none;
+}
+
+.enlaces-menu.activado{
+    display: block;
+}
+
+.enlaces-menu li:first-child{
+    margin-top:60px;
+}
+
+
+.enlaces-menu li{
+    list-style: none;
+    margin: 15px 0 0 0;
+}
+
+.enlaces-menu li a{
+    text-decoration: none;
+    color:#6a6a6a;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
 }
 
 
@@ -84,9 +120,10 @@ img{
     text-align: center;
 }
 
-.icon-arrow{
-    font-size: 20px;
+.carousel-inner div{
+    height: 60vh;
 }
+
 
 /*---SEARCH BAR---*/
 
@@ -94,7 +131,7 @@ img{
     margin: 30px auto 40px auto;
     position:relative;
     width:80%;
-    background-color:#acceff;
+    background-color:#ececec;
     padding: 7px;
     border-radius: 5px;
 }
@@ -109,29 +146,45 @@ img{
     border:none;
     width:100%;
     padding: 0 5px;
-    background-color:#acceff;
+    background-color:#ececec;
     color:rgb(0, 0, 0);
     border-radius: 5px;
     font-size: 15px;
     font-family: 'Roboto', sans-serif;
-    color:#455266;
+    color:#6a6a6a;
 }
 
 .search:focus{
-    outline: none; 
+    outline: none;
 }
 
 .boton-lupa{
     border:none;
-    background-color:#acceff;
-    color: #455266;
+    background-color:transparent;
+    color: #6a6a6a;
 }
 
 /*---ICONO-ARROW---*/
 
 .icon-arrow{
+    font-size: 20px;
+    text-align: center;
+    margin-top:10px;
+    margin-bottom: 20px;
+}
+
+.icon-arrow a{
+    color:white;
+}
+
+.icon-arrow-uno{
+    font-size: 20px;
     text-align: center;
     margin-bottom: 20px;
+}
+
+.icon-arrow-uno a{
+    color:#6a6a6a;
 }
 
 
@@ -160,12 +213,19 @@ img{
     background-color: #acceff;
 }
 
+/*---MAIN SECTION INDEX---*/
+
+#main-section-index{
+    width:100%;
+    min-height: 100vh;
+}
+
 
 /*---SECCIÓN 1---*/
 
-.seccion-uno{
+#seccion-uno{
     width:100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url(/imgs/blue.jpg);
     background-repeat: no-repeat;
     background-size:cover;
@@ -173,17 +233,16 @@ img{
 }
 
 .botones{
+    min-height: 85vh;
     display: flex;
-    position:relative;
     flex-direction: column;
+    justify-content: end;
     text-align: center;
-    margin: 310px auto 0px auto;
-    bottom:20px;
 }
 
 .saber-mas{
-    margin-bottom: 10px;
     padding: 7px;
+    margin-bottom: 15px;
     border:none;
     border-radius: 20px;
     font-family: 'Roboto', sans-serif;
@@ -194,7 +253,6 @@ img{
 }
 
 .compra-ahora{
-    margin-bottom: 30px;
     padding: 7px;
     border:none;
     border-radius: 20px;
@@ -203,13 +261,12 @@ img{
     color: rgb(0, 0, 0);
     background-color: #ececec;
     width: 80%;
-
 }
 
 .texto-uno{
     text-align: center;
     position:relative;
-    top: 30px;
+    top: 100px;
 }
 
 .nombre-auto-uno{
@@ -229,9 +286,9 @@ img{
 
 /*---SECCIÓN 2---*/
 
-.seccion-dos{
+#seccion-dos{
     width:100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url(/imgs/black.jpg);
     background-repeat: no-repeat;
     background-size:cover;
@@ -240,9 +297,9 @@ img{
 
 /*---SECCIÓN 3---*/
 
-.seccion-tres{
+#seccion-tres{
     width:100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url(/imgs/red.jpg);
     background-repeat: no-repeat;
     background-size:cover;
@@ -252,9 +309,9 @@ img{
 
 /*---SECCIÓN 4---*/
 
-.seccion-cuatro{
+#seccion-cuatro{
     width:100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url(/imgs/puente.jpg);
     background-repeat: no-repeat;
     background-size:cover;
@@ -263,9 +320,9 @@ img{
 
 /*---SECCIÓN 5---*/
 
-.seccion-cinco{
+#seccion-cinco{
     width:100%;
-    height: 100%;
+    min-height: 100vh;
     background-image: url(/imgs/white.jpg);
     background-repeat: no-repeat;
     background-size:cover;
@@ -275,8 +332,11 @@ img{
 
 /*---CINCO PASOS---*/
 
-.cincopasos{
-    margin: 50px 0;
+#cincopasos{
+    width:100%;
+    min-height: 100vh;
+    margin: 200px 0;
+    text-align: center;
 }
 
 .cincopasos h4{
