--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
@@ -26,27 +26,36 @@
 
         <div class="barra-blanca">
             <nav class="navbar">
-                <h1>CARMAKERS</h1>
-                <button class="menu">Menú</button>
+
+                <a href="/"><h1>CARMAKERS</h1></a>
+
+                <ul class="enlaces-menu">
+                    <li><a href="/login">Cuenta</a></li>
+                    <li><a href="/Carrito">Carrito</a></li>
+                    <li><a href="/Carrito">Comprar</a></li>
+                    <li><a href="/Contacto">Contacto</a></li>
+                    <li><a href="/Contacto">Soporte</a></li>
+                </ul>
+
+                <button class="menu" type="button">Menú</button>
         </nav>
         </div>
-
 
     </header>
 
 
     <main>
-        <section>
+        <section id="main-section-index">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="\imgs\bosque.jpg" class="d-block w-100" alt="...">
+                    <img src="\imgs\prueba.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="\imgs\black.jpg" class="d-block w-100" alt="...">
+                    <img src="\imgs\prueba2.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="\imgs\grey.jpg" class="d-block w-100" alt="...">
+                    <img src="\imgs\prueba3.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -75,8 +84,8 @@
               </div>
 
 
-              <div class="icon-arrow">
-                <i class="fas fa-solid fa-angle-down"></i>
+              <div class="icon-arrow-uno">
+                <a href="#seccion-uno"><i class="fas fa-solid fa-angle-down"></i></a>
               </div>
         </section>
         
@@ -85,14 +94,12 @@
                 <button type="button" ><img src="\imgs\wpp.png" alt="Whatsapp"></button>
             </div>
         </article>
-        
         </section>
 
 
 
 
-
-        <section class="seccion-uno">
+        <section id="seccion-uno">
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 1</h2>
@@ -108,6 +115,10 @@
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
                 
+                <div class="icon-arrow">
+                    <a href="#seccion-dos"><i class="fas fa-solid fa-angle-down"></i></a>
+                </div>
+                  
             </div>
 
         </section>
@@ -116,7 +127,7 @@
 
 
 
-        <section class="seccion-dos">
+        <section id="seccion-dos">
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 2</h2>
@@ -130,6 +141,10 @@
                 <a href="/carrito">
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
+
+                <div class="icon-arrow">
+                    <a href="#seccion-tres"><i class="fas fa-solid fa-angle-down"></i></a>
+                </div>
             </div>
 
         </section>
@@ -138,7 +153,7 @@
 
 
 
-        <section class="seccion-tres">
+        <section id="seccion-tres">
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 3</h2>
@@ -152,6 +167,11 @@
                 <a href="/carrito">
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
+
+                <div class="icon-arrow">
+                    <a href="#seccion-cuatro"><i class="fas fa-solid fa-angle-down"></i></a>
+                </div>
+
             </div>
 
         </section>
@@ -160,7 +180,7 @@
 
 
 
-        <section class="seccion-cuatro">
+        <section id="seccion-cuatro">
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 4</h2>
@@ -174,6 +194,11 @@
                 <a href="/carrito">
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
+
+                <div class="icon-arrow">
+                    <a href="#seccion-cinco"><i class="fas fa-solid fa-angle-down"></i></a>
+                </div>
+
             </div>
 
         </section>
@@ -182,7 +207,7 @@
 
 
 
-        <section class="seccion-cinco">
+        <section id="seccion-cinco">
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 5</h2>
@@ -199,6 +224,11 @@
                 <a href="/carrito">
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
+
+                <div class="icon-arrow">
+                    <a href="#cincopasos"><i class="fas fa-solid fa-angle-down"></i></a>
+                </div>
+
             </div>
 
         </section>
@@ -206,7 +236,7 @@
 
 
 
-        <section class="cincopasos">
+        <section id="cincopasos">
             <h4>PODÉS TENER TU AUTO EN 5 PASOS</h4>
 
             <article>
@@ -262,7 +292,7 @@
 
     </footer>
 
-
+    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
