--- a/views/login.html
+++ b/views/login.html
@@ -26,7 +26,7 @@
 
             <div class="barra-blanca">
                 <nav class="navbar">
-                    <h1>CARMAKERS</h1>
+                    <a href="/"><h1>CARMAKERS</h1></a>
                     <button class="menu">Menú</button>
             </nav>
             </div>
