Modifique el main para tablet y desktop

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -19,13 +19,13 @@
 }
 
 nav h1{
-    color:black;
+    color:#11151a;
     padding:0;
-    margin: 10px 0 0 15px;
+    margin: 0 0 0 15px;
     font-family: fuentelogo;
     font-size: 15px;
     position: fixed;
-    top: 7px;
+    top: 15px;
     z-index: 5;
 }
 
@@ -35,6 +35,7 @@ nav h1{
     border:none;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
+    font-weight: 400;
     padding: 5px 15px;
     border-radius: 5px;
     position: fixed;
@@ -54,31 +55,41 @@ nav h1{
 .enlaces-menu{
     position: absolute;
     top: 0px;
-    right: 0px;
+    right: -50px;
     padding-right:100px;
     background-color: rgb(255, 255, 255);
     height: 500vh;
     z-index: 20;
+    opacity: 1;
     display: none;
 }
+
+
+@keyframes muestraMenu{
+    from{right: -50}
+    to{right: 0}
+
+    from{ opacity:0}
+    to{opacity: 1}
+}
+
 
 .enlaces-menu.activado{
     display: block;
+    animation: muestraMenu 500ms ease-in-out both;
 }
 
-.enlaces-menu.desactivado{
-    display: none;
-}
 
 .enlaces-menu li:first-child{
-    margin-top:60px;
+    margin-top: 100px;
 }
 
 
 .enlaces-menu li{
     list-style: none;
-    margin: 15px 0 0 0;
+    margin: 20px 0 0 0;
 }
+
 
 .enlaces-menu li a{
     text-decoration: none;
@@ -87,14 +98,42 @@ nav h1{
     font-weight: 500;
 }
 
+@keyframes muestraCruz{
+    from{opacity:0}
+    to{opacity:1}
+}
+
 .cruz{
+    opacity:1;
+    z-index: 30;
     position:absolute;
     right: 10px;
     top: 10px;
     background-color: transparent;
     border:none;
     color:#6a6a6a;
+    display: none;
 }
+
+
+.cruz.activado{
+    display: block;
+    animation: muestraCruz 500ms ease-in-out both;
+}
+
+.cuenta-button{
+    display:none;
+}
+
+.carrito-button{
+    display: none;
+}
+
+.enlaces-productos{
+    display: none;
+}
+
+
 
 /*---IMÁGENES----*/
 
@@ -183,7 +222,9 @@ img{
     font-size: 20px;
     text-align: center;
     margin-top:10px;
-    margin-bottom: 20px;
+    position:relative;
+    bottom: 150px;
+    animation: arrow-movement 2s infinite;
 }
 
 .icon-arrow a{
@@ -199,6 +240,19 @@ img{
 .icon-arrow-uno a{
     color:#6a6a6a;
 }
+
+/*ICONO ARROW MAIN*/
+
+.icon-arrow-main{
+    font-size: 20px;
+    text-align: center;
+    padding: 20px;
+}
+
+.icon-arrow-main a{
+    color: #6a6a6a;
+}
+
 
 
 /*---WPP BOTON---*/
@@ -240,41 +294,49 @@ img{
 #seccion-uno{
     width:100%;
     min-height: 100vh;
-    background-image: url(/imgs/blue.jpg);
+    background-image: url(/imgs/editada0.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
 }
 
 .botones{
-    min-height: 85vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     text-align: center;
 }
 
+.botones-container{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position:relative;
+    bottom: 140px;
+}
+
 .saber-mas{
-    padding: 7px;
-    margin-bottom: 15px;
-    border:none;
-    border-radius: 20px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    color:white;
-    background-color: #ed7237;
-    width: 80%;
+        padding: 7px;
+        border:none;
+        border-radius: 20px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        color:white;
+        background-color: #ed7237;
+        width: 250px;
+        margin-bottom: 20px;
 }
 
 .compra-ahora{
-    padding: 7px;
-    border:none;
-    border-radius: 20px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
-    background-color: #ececec;
-    width: 80%;
+        padding: 7px;
+        border:none;
+        border-radius: 20px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        color: rgb(0, 0, 0);
+        background-color: #ececec;
+        width: 250px;
 }
 
 .texto-uno{
@@ -285,16 +347,25 @@ img{
 
 .nombre-auto-uno{
     font-size: 2em;
-    color:white;
+    color:#11151a;
     font-family: 'Raleway', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
+    margin:3px;
 }
 
 .desc-auto-uno{
     font-size: 1em;
-    color:white;
+    color:#11151a;
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
+    text-align: center;
+}
+
+.desc-auto-uno a{
+    font-size: 1em;
+    color:#11151a;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
     text-align: center;
 }
 
@@ -303,7 +374,7 @@ img{
 #seccion-dos{
     width:100%;
     min-height: 100vh;
-    background-image: url(/imgs/black.jpg);
+    background-image: url(/imgs/editada1.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
@@ -314,7 +385,7 @@ img{
 #seccion-tres{
     width:100%;
     min-height: 100vh;
-    background-image: url(/imgs/red.jpg);
+    background-image: url(/imgs/editada2.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
@@ -326,7 +397,7 @@ img{
 #seccion-cuatro{
     width:100%;
     min-height: 100vh;
-    background-image: url(/imgs/puente.jpg);
+    background-image: url(/imgs/editada3.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
@@ -337,7 +408,7 @@ img{
 #seccion-cinco{
     width:100%;
     min-height: 100vh;
-    background-image: url(/imgs/white.jpg);
+    background-image: url(/imgs/editada4.jpg);
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
@@ -1056,25 +1127,205 @@ main section article div h3{
     text-align: center;
 }
 
+/*---ANIMACIONES---*/
+
+@keyframes arrow-movement{
+    0% { bottom: 145px}
+    50% { bottom: 155px}
+    100% { bottom: 145px}
+}
+
 
 /*---MEDIA QUERIES---*/
 
 
 @media (min-width: 400px){
 
-    .grid-container-dos{
-        font-family: 'Raleway', sans-serif;
-        color:black;
-        font-weight: 500;
-        display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: 1fr 25px 1fr 25px 1fr;
-        grid-gap: 5px;
-        text-align: center;
-
+.grid-container-dos{
+    font-family: 'Raleway', sans-serif;
+    color:black;
+    font-weight: 500;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 25px 1fr 25px 1fr;
+    grid-gap: 5px;
+    text-align: center;
 }
+
+.saber-mas, .compra-ahora{
+    width: 350px;
+}
+
+.texto-uno{
+    top: 110px;
+}
+
 }
 
 @media (min-width: 600px){
+
+    .texto-uno{
+        top: 130px;
+    }
+
+    .saber-mas{
+        padding: 10px;
+        margin-bottom: 15px;
+        margin-right: 12px;
+        border:none;
+        border-radius: 20px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        color:white;
+        background-color: #ed7237;
+        width: 250px;
+    }
+
+    .compra-ahora{
+        margin-left: 12x;
+        padding: 10px;
+        border:none;
+        border-radius: 20px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        color: rgb(0, 0, 0);
+        background-color: #ececec;
+        width: 250px;
+    }
+
+    .botones{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        text-align: center;
+    }
+
+
+    .botones-container{
+        bottom: 160px;
+    }
+}
+
+
+@media (min-width:900px){
+    .saber-mas{
+        padding: 12px;
+        margin-bottom: 15px;
+        margin-right: 15px;
+        width: 300px;
+    }
+
+    .compra-ahora{
+        margin-left: 15x;
+        padding: 12px;
+        width: 300px;
+    }
+
+
+    .botones-container{
+        bottom: 200px;
+    }
+
+    .texto-uno{
+        top: 140px;
+    }
+
+    .nombre-auto-uno{
+        font-size: 3em;
+    }
+    
+    .desc-auto-uno{
+        font-size: 1.1em;
+    }
+    
+    .desc-auto-uno a{
+        font-size: 1.1em;
+    }
+
+
+    .icon-arrow{
+        font-size: 20px;
+        text-align: center;
+        margin-top:10px;
+        position:relative;
+        bottom: 185px;
+    }
+
+    @keyframes arrow-movement{
+        0% { bottom: 185px}
+        50% { bottom: 180px}
+        100% { bottom: 185px}
+    }
+
+    /*--NAVEGADOR--*/
+
+.menu{
+    background-color: transparent;
+    top:16px;
+    right: 15px;
+    padding: 0;
+    margin: 0;
+
+}
+
+.cuenta-button{
+    display: block;
+    cursor:pointer;
+    padding: 0;
+    margin: 0;
+    border:none;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    border-radius: 5px;
+    position: fixed;
+    right: 65px;
+    top:16px;
+    background-color: transparent;
+}
+
+.carrito-button{
+    display: block;
+    cursor:pointer;
+    padding: 0;
+    margin: 0;
+    border:none;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    border-radius: 5px;
+    position: fixed;
+    right: 125px;
+    top:16px;
+    background-color: transparent;
+}
+
+.enlaces-productos{
+    list-style: none;
+    display: flex;
+    margin: 11px auto 0 auto;
+    padding-bottom: 10px;
+}
+
+.enlaces-productos li{
+    padding: 0 25px 0 0;
+    margin: 0;
+}
+
+.enlaces-productos li a{
+    text-decoration: none;
+    font-size: 15px;
+    color:#11151a;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+
+.navbar{
+    padding: 0;
+    margin: 0;
+}
 
 }
