--- a/views/index.html
+++ b/views/index.html
@@ -26,21 +26,40 @@
     <header>
 
         <div class="barra-blanca">
+
+            <!--Navegador mobile-->
             <nav class="navbar">
 
                 <a href="/"><h1>CARMAKERS</h1></a>
 
+                <button class="cruz" type="button"><i class="fa-solid fa-xmark"></i></button>
+
                 <ul class="enlaces-menu">
-                    <button class="cruz" type="button"><i class="fa-solid fa-xmark"></i></button>
-                    <li><a href="/login">Cuenta</a></li>
+                    <li><a href="/login" class="cuenta">Cuenta</a></li>
                     <li><a href="/Carrito">Carrito</a></li>
                     <li><a href="/Carrito">Comprar</a></li>
                     <li><a href="/Contacto">Contacto</a></li>
                     <li><a href="/Contacto">Soporte</a></li>
                 </ul>
 
+
+
                 <button class="menu" type="button">Menú</button>
+                <button class="cuenta-button" type="button">Cuenta</button>
+                <button class="carrito-button" type="button">Carrito</button>
+
+
+                <ul class="enlaces-productos">
+                    <li><a href="#seccion-uno">Modelo uno</a></li>
+                    <li><a href="#seccion-dos">Modelo 2</a></li>
+                    <li><a href="#seccion-tres">Modelo 3</a></li>
+                    <li><a href="#seccion-cuatro">Modelo 4</a></li>
+                    <li><a href="#seccion-cinco">Modelo 5</a></li>
+                </ul>
+
         </nav>
+
+
         </div>
 
     </header>
@@ -85,10 +104,10 @@
                   </form>
               </div>
 
-
-              <div class="icon-arrow-uno">
+              <div class="icon-arrow-main">
                 <a href="#seccion-uno"><i class="fas fa-solid fa-angle-down"></i></a>
-              </div>
+            </div>
+
         </section>
         
         <article class="article-wpp">
@@ -105,9 +124,10 @@
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 1</h2>
-                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
             </div>
 
+            <div class="botones-container">
             <div class="botones">
                 <a href="/detalleproducto">
                     <button type="button" class="saber-mas">SABER MÁS</i></button>
@@ -116,12 +136,15 @@
                 <a href="/carrito">
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
-                
-                <div class="icon-arrow">
-                    <a href="#seccion-dos"><i class="fas fa-solid fa-angle-down"></i></a>
-                </div>
-                  
+            
             </div>
+            
+        </div>
+
+        <div class="icon-arrow">
+            <a href="#seccion-dos"><i class="fas fa-solid fa-angle-down"></i></a>
+        </div>
+              
 
         </section>
 
@@ -133,8 +156,10 @@
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 2</h2>
-                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
             </div>
+
+            <div class="botones-container">
 
             <div class="botones">
                 <a href="/detalleproducto">
@@ -143,11 +168,14 @@
                 <a href="/carrito">
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
-
-                <div class="icon-arrow">
-                    <a href="#seccion-tres"><i class="fas fa-solid fa-angle-down"></i></a>
-                </div>
+            
             </div>
+
+        </div>
+
+        <div class="icon-arrow">
+            <a href="#seccion-tres"><i class="fas fa-solid fa-angle-down"></i></a>
+        </div>
 
         </section>
 
@@ -159,8 +187,10 @@
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 3</h2>
-                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
             </div>
+
+            <div class="botones-container">
 
             <div class="botones">
                 <a href="/detalleproducto">
@@ -170,10 +200,11 @@
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
 
-                <div class="icon-arrow">
-                    <a href="#seccion-cuatro"><i class="fas fa-solid fa-angle-down"></i></a>
-                </div>
+            </div>
+         </div>
 
+            <div class="icon-arrow">
+                <a href="#seccion-cuatro"><i class="fas fa-solid fa-angle-down"></i></a>
             </div>
 
         </section>
@@ -186,8 +217,10 @@
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 4</h2>
-                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
             </div>
+
+            <div class="botones-container">
 
             <div class="botones">
                 <a href="/detalleproducto">
@@ -197,10 +230,11 @@
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
 
-                <div class="icon-arrow">
-                    <a href="#seccion-cinco"><i class="fas fa-solid fa-angle-down"></i></a>
-                </div>
+            </div>
+        </div>
 
+            <div class="icon-arrow">
+                <a href="#seccion-cinco"><i class="fas fa-solid fa-angle-down"></i></a>
             </div>
 
         </section>
@@ -213,11 +247,11 @@
 
             <div class="texto-uno">
                 <h2 class="nombre-auto-uno">Modelo 5</h2>
-                <h3 class="desc-auto-uno">Hecho para la vida real</h3>
+                <h3 class="desc-auto-uno">Conocé <a href="">acá</a> ofertas exclusivas</h3>
             </div>
 
 
-
+            <div class="botones-container">
             
             <div class="botones">
                 <a href="/detalleproducto">
@@ -227,10 +261,11 @@
                     <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
                 </a>
 
-                <div class="icon-arrow">
-                    <a href="#cincopasos"><i class="fas fa-solid fa-angle-down"></i></a>
-                </div>
+            </div>
+        </div>
 
+            <div class="icon-arrow">
+                <a href="#cincopasos"><i class="fas fa-solid fa-angle-down"></i></a>
             </div>
 
         </section>
